--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,3 @@
-
-
 .walls {
     width          : 100vw;
     display        : flex;
@@ -19,6 +17,26 @@
     align-items    : center;
     box-sizing     : border-box;
     border-radius  : 0px;
+    text-decoration: none;
+    color          : inherit;
+}
+
+@media (min-width: 435px) {
+    .oneItem {
+        height: 400px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .oneItem {
+        height: 550px;
+    }
+}
+
+@media (min-width: 1450px) {
+    .oneItem {
+        height: 900px;
+    }
 }
 
 .paper {
@@ -47,7 +65,8 @@
 }
 
 .buttonsLeft {
-    flex: 50%;
+    flex     : 50%;
+    font-size: 0.6em;
 }
 
 .buttonsRight {
