--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -36,3 +36,120 @@
 .navRightLeft {
     flex: 50%;
 }
+
+/*navbar for big screen*/
+
+.navbarWide {
+    height          : 400px;
+    width           : 100vw;
+    background-color: rgb(238, 238, 238);
+    display         : flex;
+    background-image: url(../public/navbarBackgroind.jpg);
+    background-size : 100% 100%;
+}
+
+@media (max-width: 400px) {
+    .navbarWide {
+        display: none;
+    }
+}
+
+@media (min-width: 1440px) {
+    .navbarWide {
+        height: 500px;
+    }
+}
+
+.wideNavLeft {
+    flex       : 50%;
+    margin-left: 50px;
+    margin-top : 60px;
+}
+
+.logo {
+    font-size  : 4em;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color      : rgb(119, 119, 119);
+    text-shadow:
+
+        3px 3px 8px rgb(119, 119, 119);
+}
+
+@media (max-width: 768px) {
+    .logo {
+        font-size  : 2em;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        color      : rgb(119, 119, 119);
+        text-shadow:
+
+            3px 3px 8px rgb(119, 119, 119);
+    }
+}
+
+.wideNavRight {
+    flex          : 50%;
+    display       : flex;
+    flex-direction: column;
+}
+
+.wideNavRightTop {
+    flex   : 50%;
+    display: flex;
+}
+
+.wideNavRightBottom {
+    flex      : 50%;
+    display   : flex;
+    box-sizing: border-box;
+}
+
+.wideNavRight1 {
+    flex: 50%;
+}
+
+.wideNavRight2 {
+    flex           : 50%;
+    display        : flex;
+    justify-content: center;
+    margin-top     : 65px;
+
+}
+
+.wideNavRight3 {
+    flex: 50%;
+}
+
+.wideNavRight4 {
+    flex           : 50%;
+    display        : flex;
+    align-items    : flex-end;
+    justify-content: center;
+}
+
+.wideNavRight4Text1 {
+    color        : aliceblue;
+    margin-bottom: 5px;
+    padding      : 3px;
+    font-size    : 0.7em;
+}
+
+.wideNavRight4Text2 {
+    color        : aliceblue;
+    margin-bottom: 5px;
+    padding      : 3px;
+    font-size    : 0.7em;
+}
+
+.wideNavRight4Text3 {
+    color        : aliceblue;
+    margin-bottom: 5px;
+    padding      : 3px;
+    font-size    : 0.7em;
+}
+
+.wideNavRight4Text1:hover,
+.wideNavRight4Text2:hover,
+.wideNavRight4Text3:hover {
+    transition-duration: 0.2s;
+    margin-bottom      : 9px;
+}
