changed img to Image next component to enable deploy and made some styling modifications

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -110,7 +110,7 @@
 .wideNavRight2 {
     flex           : 50%;
     display        : flex;
-    justify-content: center;
+    justify-content: space-around;
     margin-top     : 65px;
 
 }
