--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,9 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Vollkorn+SC&display=swap');
 
+.walls {
+    height         : 400px;
+    width          : 100vw;
+    display        : flex;
+    justify-content: center;
+    align-items    : center;
+    flex-direction : column;
+}
+
 .footer {
-    height          : 400px;
+    height          : 100%;
+    width           : 95%;
     bottom          : 100px;
-    background-color: rgba(166, 204, 208, 0.4);
+    color           : white;
+    background-color: rgb(26, 26, 26);
+    border-radius   : 50px;
+    display         : flex;
+    justify-content : center;
 }
 
 .footerContent {
@@ -11,7 +25,6 @@
     justify-content: center;
     font-size      : 1em;
     font-family    : 'Vollkorn SC', serif;
-
-
-    width: 100vw;
+    width          : 100vw;
+    opacity        : 70%;
 }
