--- a/styles/Signin.module.css
+++ b/styles/Signin.module.css
@@ -1,6 +1,7 @@
 .walls {
     height         : 80vh;
     width          : 100vw;
+    min-height     : 100vh;
     display        : flex;
     justify-content: center;
     align-items    : center;
