--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Vollkorn+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Besley:wght@500&display=swap');
 
 .walls {
     height         : 400px;
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items    : center;
     flex-direction : column;
+    padding-bottom : 2%;
 }
 
 .footer {
@@ -14,17 +15,84 @@
     width           : 95%;
     bottom          : 100px;
     color           : white;
-    background-color: rgb(26, 26, 26);
-    border-radius   : 50px;
+    background-color: rgb(0, 0, 0);
+    border-radius   : 20px;
     display         : flex;
     justify-content : center;
 }
 
 .footerContent {
     display        : flex;
-    justify-content: center;
+    justify-content: space-around;
+    flex-direction : column;
+    align-items    : center;
     font-size      : 1em;
-    font-family    : 'Vollkorn SC', serif;
-    width          : 100vw;
-    opacity        : 70%;
+    font-family    : 'Besley', serif;
+    height         : 100%;
+    width          : 100%;
+}
+
+.footerUp {
+    display        : flex;
+    justify-content: center;
+    flex           : 10%;
+    margin-top     : 1%;
+    height         : 100%;
+    width          : 100%;
+}
+
+.footerBelow {
+    display: flex;
+    flex   : 80%;
+    height : 100%;
+    width  : 100%;
+}
+
+.footerSocials {
+    display        : flex;
+    justify-content: space-around;
+    align-items    : center;
+    flex           : 30%;
+}
+
+.footerDown {
+    display: flex;
+    flex   : 70%;
+    height : 100%;
+    width  : 100%;
+}
+
+.footerDownLeft {
+    height         : 100%;
+    width          : 100%;
+    flex           : 40%;
+    display        : flex;
+    flex-direction : column;
+    justify-content: space-around;
+    align-items    : center;
+    font-size      : 0.8rem;
+}
+
+.footerDownRight {
+    height         : 100%;
+    width          : 100%;
+    flex           : 60%;
+    display        : flex;
+    justify-content: center;
+    align-items    : center;
+}
+
+@media (max-width: 425px) {
+
+    .footerBelow {
+        flex-direction: column;
+    }
+}
+
+@media (min-width: 425px) {
+
+    .footerSocials {
+        flex-direction: column;
+    }
+
 }
