--- a/styles/HelloToUser.module.css
+++ b/styles/HelloToUser.module.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Besley:wght@500&display=swap');
+
 .walls {
     display         : flex;
     justify-content : center;
     align-items     : center;
     height          : 30px;
     width           : 100vw;
-    background-color: rgb(181, 245, 242);
+    background-color: rgb(255, 255, 255);
+    font-family     : 'Besley', serif;
 }
