Added remove from cart  functionality

--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -1,12 +1,17 @@
-.paper {
-    display       : flex;
-    flex-direction: column;
-    border-radius : 40px;
-    width         : 250px;
-}
-
 .productInfo {
     display  : flex;
     height   : 25px;
     font-size: 0.7em;
+}
+
+.productInfoLeft {
+    display: flex;
+    flex   : 50%;
+}
+
+.productInfoRight {
+    display        : flex;
+    justify-content: center;
+    align-items    : center;
+    flex           : 50%;
 }
