--- a/styles/GlobalNavbar.module.css
+++ b/styles/GlobalNavbar.module.css
@@ -31,9 +31,7 @@
 }
 
 .navRightRight {
-    flex: 50%;
-}
-
-.navRightLeft {
-    flex: 50%;
+    display        : flex;
+    justify-content: center;
+    width          : 100%;
 }
