--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -19,9 +19,10 @@
 }
 
 .navRight {
-    display    : flex;
-    flex       : 20%;
-    align-items: center;
+    display        : flex;
+    flex           : 20%;
+    align-items    : center;
+    justify-content: center;
 }
 
 .navMiddle {
@@ -37,11 +38,9 @@
 }
 
 .navRightRight {
-    flex: 50%;
-}
-
-.navRightLeft {
-    flex: 50%;
+    display        : flex;
+    justify-content: center;
+    width          : 100%;
 }
 
 /*navbar for big screen*/
