--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,12 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap');
+
 .walls {
     width          : 100vw;
     display        : flex;
     justify-content: center;
+    background     : linear-gradient(to right bottom, rgba(25, 0, 255, 0.7), rgba(0, 229, 255, 0.3));
+    padding-top    : 2%;
 }
 
 .container {
-    height: 100%;
-    width : 90%;
+    height    : 100%;
+    width     : 90%;
     min-height: 100vh;
 }
 
@@ -14,7 +18,7 @@
     display        : flex;
     justify-content: center;
     align-items    : center;
-    height         : 150px;
+    height         : 220px;
     align-items    : center;
     box-sizing     : border-box;
     border-radius  : 0px;
@@ -22,40 +26,61 @@
     color          : inherit;
 }
 
-@media (min-width: 435px) {
-    .oneItem {
-        height: 240px;
-    }
+
+
+.paper {
+    height         : 70%;
+    width          : 80%;
+    display        : flex;
+    flex-direction : column;
+    border-radius  : 20px;
+    background     : linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
+    backdrop-filter: blur(10rem);
+    padding-bottom : 3%;
+    padding-top    : 3%;
 }
 
-@media (min-width: 1024px) {
-    .oneItem {
-        height: 350px;
+.paper:hover{
+    background     : linear-gradient(to right bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.7));
+}
+
+.imageContainer {
+    display        : flex;
+    justify-content: center;
+    align-items    : center;
+    height         : 100%;
+    flex           : 70%;
+    padding-top    : 3%;
+}
+
+.productInfo {
+    height     : 100px;
+    display    : flex;
+    flex       : 30%;
+    align-items: center;
+    font-size  : 0.8rem;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+}
+
+.productInfoLeft {
+    display        : flex;
+    justify-content: center;
+    align-items    : center;
+    flex           : 50%;
+}
+
+.productInfoRight {
+    flex: 50%;
+}
+
+@media (max-width: 426px) {
+    .productInfo {
+        font-size: 0.5rem;
     }
 }
 
 @media (min-width: 1450px) {
     .oneItem {
-        height: 500px;
+        height: 300px;
     }
-}
-
-.paper {
-    height        : 90%;
-    width         : 90%;
-    display       : flex;
-    flex-direction: column;
-    border-radius : 40px;
-}
-
-.images {
-    height: 120px;
-    width : 100%;
-    flex  : 60%;
-}
-
-.productInfo {
-    display  : flex;
-    height: 100px;
-    font-size: 0.7em;
 }
