--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,11 +1,11 @@
 .navbar {
     height          : 60px;
     width           : 100vw;
-    background-color: rgb(100, 100, 100);
+    background-color: rgba(100, 100, 100, 0.672);
     display         : flex;
 }
 
-@media (min-width: 400px) {
+@media (min-width: 426px) {
     .navbar {
         display: none;
     }
@@ -46,15 +46,13 @@
 /*navbar for big screen*/
 
 .navbarWide {
-    height          : 400px;
+    background-color: burlywood;
+    height          : 50vh;
     width           : 100vw;
-    background-color: rgb(238, 238, 238);
     display         : flex;
-    background-image: url(../public/navbarBackgroind.jpg);
-    background-size : 100% 100%;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 425px) {
     .navbarWide {
         display: none;
     }
@@ -67,7 +65,7 @@
 }
 
 .wideNavLeft {
-    flex       : 50%;
+    flex       : 25%;
     margin-left: 50px;
     margin-top : 60px;
 }
@@ -79,6 +77,7 @@
     text-shadow:
 
         3px 3px 8px rgb(119, 119, 119);
+    border-radius: 20px;
 }
 
 @media (max-width: 768px) {
@@ -93,14 +92,15 @@
 }
 
 .wideNavRight {
-    flex          : 50%;
+    flex          : 75%;
     display       : flex;
     flex-direction: column;
 }
 
 .wideNavRightTop {
-    flex   : 50%;
-    display: flex;
+    flex             : 50%;
+    display          : flex;
+    background-repeat: no-repeat;
 }
 
 .wideNavRightBottom {
@@ -110,11 +110,15 @@
 }
 
 .wideNavRight1 {
-    flex: 50%;
+    flex           : 70%;
+    display        : flex;
+    justify-content: center;
+    align-items    : flex-end;
 }
 
 .wideNavRight2 {
-    flex           : 50%;
+    flex           : 30%;
+    height         : 18px;
     display        : flex;
     justify-content: space-around;
     margin-top     : 65px;
