--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -9,7 +9,7 @@
     flex-direction : column;
     padding-bottom : 2%;
     padding-top    : 2%;
-    background     : linear-gradient(to top right, rgba(25, 0, 255, 0.7), rgba(0, 229, 255, 0.3));
+    background     : linear-gradient(to top, rgba(0, 102, 255, 0.6), rgba(255, 255, 255, 0.1));
 }
 
 .footer {
@@ -17,7 +17,7 @@
     width          : 95%;
     bottom         : 100px;
     color          : white;
-    background     : linear-gradient(to right bottom, rgba(240, 243, 242, 0.7), rgba(240, 243, 242, 0.3));
+    background     : linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
     border-radius  : 20px;
     display        : flex;
     justify-content: center;
