--- a/styles/ProductDescription.module.css
+++ b/styles/ProductDescription.module.css
@@ -4,18 +4,30 @@
     display: flex;
 }
 
-
-
-.imageContainer {
+.imageWalls {
     flex           : 50%;
     display        : flex;
     align-items    : center;
     justify-content: center;
+    background     : linear-gradient(to right, rgba(0, 81, 255, 0.8), rgba(255, 255, 255, 0.2));
 }
 
-.productImage {
-    height: 100px;
-    width : 90%;
+.imageContainer {
+    display        : flex;
+    align-items    : center;
+    justify-content: center;
+    height         : 50%;
+    width          : 50%;
+    background     : linear-gradient(to right top, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
+    backdrop-filter: blur(0.3rem);
+    border-radius  : 20px;
+    padding-left   : 6%;
+    padding-right  : 6%;
+    z-index        : 77;
+}
+
+.imageContainer:hover {
+    background: linear-gradient(to left, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.7));
 }
 
 .buttonsAndInfo {
@@ -24,7 +36,6 @@
     flex-direction : column;
     align-items    : center;
     justify-content: center;
-    margin         : 1%;
 }
 
 .productInfoH1 {
@@ -61,5 +72,9 @@
 @media (max-width: 425px) {
     .productImage {
         height: 120px;
+    }
+
+    .imageContainer {
+        height: 30%;
     }
 }
